# HTW-Water-Sample-Collector

./: .gitignore  README.md
.reuse/: dep5
doc/: main.md
doc/assembly/: main.md
doc/dev/: main.md
doc/maintenance/: setup.md
doc/user/: manual.md
res/concept/: SPEC.md
src/elec/kicad_logos/: htw_logo.kicad_mod  htw_logo_x15.kicad_mod  htw_logo_x30.kicad_mod
src/elec/sim/: power_output_protection.sch  power_output_protection2.sch  power_protection.sch
src/elec/water_sample_collector_iot_main/: BOM_water_sample_collector_iot_main.csv  water_sample_collector_iot_main.csv  water_sample_collector_iot_main.kicad_pcb  water_sample_collector_iot_main.kicad_prl  water_sample_collector_iot_main.kicad_pro  water_sample_collector_iot_main.kicad_sch
src/elec/water_sample_collector_iot_system/: BOM_TOP_elec.csv  BOM_activation_board_water_sample_collector_iot_system.csv  BOM_battery_assembly.csv  sym-lib-table  water_sample_collector_iot_system.kicad_pcb  water_sample_collector_iot_system.kicad_prl  water_sample_collector_iot_system.kicad_pro  water_sample_collector_iot_system.kicad_sch  wsciot.bak  wsciot.kicad_sym
src/firmware/check_clock/check_clock/: MCP7940.cpp  MCP7940.h  check_clock.ino
src/firmware/check_connection/: check_connection.ino
src/mech/wsciot-mountingframe/: README.md  pyproject.toml
src/mech/wsciot-mountingframe/wsciot_mountingframe/: __main__.py
src/mech/wsciot-reedcase/: README.md  pyproject.toml
src/software/wsciot/: README.md  pyproject.toml
src/software/wsciot/wsciot/: __main__.py
(+2 files in other folders)
